# gtest-death-demo

./: CMakeLists.txt  README.md  demo_test.cpp
